<resources>
    <string name="app_name" translatable="false">Slatielly</string>
    <string name="type" translatable="false">Type:</string>
    <string name="price" translatable="false">Price:</string>
    <string name="welcomeMessage" translatable="false">Welcome To Slatielly app</string>
    <string name="subWelcomeMessage" translatable="false">The best dress for you!</string>
    <string name="hirerName" translatable="false">Hirer Name:</string>
    <string name="allBooks" translatable="false">All Books</string>
    <string name="wRegisterDress" translatable="false">Register Dress</string>
    <string name="wTitleD" translatable="false">Title</string>
    <string name="wMaterial" translatable="false">Material</string>
    <string name="wColor" translatable="false">Color</string>
    <string name="wSizeDress" translatable="false">Size</string>
    <string name="wDaysOfPrepare" translatable="false">Days of Prepare</string>
    <string name="wDaysOfWashing" translatable="false">Days of Washing</string>
    <string name="wPriceDress" translatable="false">Price Per Day</string>
    <string name="wDescriptionDress" translatable="false">Description</string>
    <string name="wAddPhotoDress" translatable="false">Add Photos</string>
    <string name="wSaveDress" translatable="false">Save Dress</string>
    <string name="wTypeDress" translatable="false">Type of Dress</string>
    <string name="wEditDress" translatable="false">Edit Dress</string>
    <string name="wSetPhotos" translatable="false">Edit Photos</string>
    <string name="wSaveChanges" translatable="false">Save Changes</string>
    <string name="wStartDate" translatable="false">Start</string>
    <string name="wDateEnd" translatable="false">End</string>
    <string name="wTotalPrice" translatable="false">Total Amount</string>
    <string name="wOrders" translatable="false">Orders</string>
    <string name="allRents" translatable="false">All Rents</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="join" translatable="false">JOIN</string>
    <string name="register" translatable="false">REGISTER</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="name" translatable="false">Name</string>
    <string name="password" translatable="false">Password</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="cep" translatable="false">CEP</string>
    <string name="street" translatable="false">Street</string>
    <string name="city" translatable="false">City</string>
    <string name="number" translatable="false">Number</string>
    <string name="neighborhood" translatable="false">Neighborhood</string>
    <string name="complement" translatable="false">Complement</string>
    <string name="submit" translatable="false">SUBMIT</string>
    <string name="err_email" translatable="false">Enter a valid email</string>
    <string name="err_password" translatable="false">Password should not be empty</string>
    <string name="err_phone" translatable="false">Enter a valid phone number</string>
    <string name="err_name" translatable="false">Name should not be empty</string>
    <string name="err_cep" translatable="false">Enter a valid CEP</string>
    <string name="err_city" translatable="false">City should not be empty</string>
    <string name="err_neighborhood" translatable="false">Neighborhood should not be empty</string>
    <string name="err_street" translatable="false">Street should not be empty</string>
    <string name="err_number" translatable="false">Number should not be empty</string>
    <string name="open_drawer" translatable="false">Open</string>
    <string name="close_drawer" translatable="false">Close</string>
    <string name="all_dresses" translatable="false">All Dresses</string>
    <string name="startDate" translatable="false">Start</string>
    <string name="endDate" translatable="false">End</string>
    <string name="rentsRequests" translatable="false">Rents Requests</string>
    <string name="acceptRent" translatable="false">Accept</string>
    <string name="declineRent" translatable="false">Decline</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="edit_profile" translatable="false">Edit Profile</string>
    <string name="edit_address" translatable="false">Edit Address</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="success_edit_profile" translatable="false">Profile was edited successfully!</string>
    <string name="success_edit_address" translatable="false">Address was edited successfully!</string>
    <string name="err_material" translatable="false">Material should not be empty</string>
    <string name="err_size" translatable="false">Size should not be empty</string>
    <string name="err_description" translatable="false">Description should not be empty</string>
    <string name="err_price" translatable="false">Price should not be empty</string>
    <string name="err_washing" translatable="false">Days of washing should not be empty</string>
    <string name="err_prepare" translatable="false">Days of prepare should not be empty</string>
    <string name="err_type" translatable="false">Type should not be empty</string>
    <string name="err_color" translatable="false">Color should not be empty</string>
    <string name="Size2">Size:</string>
    <string name="Cor" translatable="false">Color:</string>
    <string name="Preço" translatable="false">Price:</string>
    <string name="Type" translatable="false">Type:</string>
    <string name="Material" translatable="false">Material:</string>
    <string name="Rent" translatable="false">RENT</string>
    <string name="COMMENTS" translatable="false">COMMENTS</string>
    <string name="Like" translatable="false">Like</string>
    <string name="Answer" translatable="false">Answer</string>
    <string name="select_start" translatable="false">SELECT THE INITIAL DATE:</string>
    <string name="select_finish" translatable="false">SELECT THE RETURN DATE:</string>
    <string name="TAKE_PHOTO" translatable="false">TAKE A PHOTO</string>
    <string name="Comment" translatable="false">Comment</string>
    <string name="mais_image" translatable="false">+ Image</string>
    <string name="menos_Imagem" translatable="false">- Image</string>
    <string name="comment2" translatable="false">Comment</string>
    <string name="New_comment" translatable="false">NEW COMMENT</string>
    <string name="Dress" translatable="false">Dress</string>
    <string name="ConfirmRent" translatable="false">Confirm Rent</string>
    <string name="ANSWERS" translatable="false">ANSWERS</string>
    <string name="NEW_ANSWER" translatable="false">NEW ANSWER</string>
    <string name="Edit_Photos" translatable="false">"Edit Photos "</string>
    <string name="Edit_dress" translatable="false">Edit Dress</string>
    <string name="Admin" translatable="false">Admin</string>
    <string name="Confirm_rent" translatable="false">Confirm Rent</string>
</resources>