<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_all_dresses"
            android:title="@string/all_dresses"
            android:checkable="true" />
        <item android:id="@+id/nav_item_all_rents"
            android:title="@string/allRents"
            android:checkable="true" />
        <item android:id="@+id/nav_item_list_orders"
            android:title="@string/wOrders"
            android:checkable="true" />

        <item android:title="@string/Admin">
            <menu>
                <item android:id="@+id/nav_item_register_dress"
                    android:title="@string/wRegisterDress"
                    android:checkable="true" />
                <item android:id="@+id/nav_item_rent_requests"
                    android:title="@string/rentsRequests"
                    android:checkable="true" />
            </menu>
        </item>
    </group>
</menu>