<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilTile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_view_new_comment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="start"
                android:hint="@string/Comment"
                android:inputType="textMultiLine|textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnComment_newComment"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100"
                android:layout_height="40"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/ubuntu"
                android:text="@string/comment2"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnImage_newComment"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100"
                android:layout_height="40"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/ubuntu"
                android:text="@string/mais_image"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <ImageView
            android:id="@+id/imageComment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            app:srcCompat="@mipmap/ic_launcher" />

    </LinearLayout>
</ScrollView>
